--- a/employee_register/templates/employee_register/searchlcl.html
+++ b/employee_register/templates/employee_register/searchlcl.html
@@ -21,7 +21,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Buttons</h1>
+                    <h1 class="h3 mb-4 text-gray-800">FCL</h1>
 
                     <div class="row">
 
@@ -38,20 +38,20 @@
                                     <div class="table-responsive">
                                         <th>
                                             <div>
-                                                <a href="{% url 'FCL_insert' %}" >
+                                                <a href="{% url 'LCL_insert' %}" >
                                                     <button type="button" class="btn btn-success" style= "margin-bottom: 1%;">+ADD</button>
                                                 </a>
-                                                <a href="{% url 'FCL_list' %}" >
+                                                <a href="{% url 'LCL_list' %}" >
                                                     <button type="button" class="btn btn-success" style= "float: right; margin-left: 1%;">View all</button>
                                                 </a>
                                                 <form
                                                 class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search" style="float: right; margin-top: 10%;"
-                                                action="{% url 'search' %}" method="get">
+                                                action="{% url 'searchlcl' %}" method="get">
                                                 <div class="input-group" >
-                                                    <input type="text" class="form-control bg-light border-0 small" placeholder="Sear for ... "
+                                                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for ... "
                                                         aria-label="Search" aria-describedby="basic-addon2" name="q" value="{{ q }}">
                                                     <div class="input-group-append">
-                                                        <button class="btn btn-primary" type="submit" style=margin>
+                                                        <button class="btn btn-primary" type="submit">
                                                             <i class="fas fa-search fa-sm"></i>
                                                         </button>
                                                     </div>
@@ -66,63 +66,56 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                    <th width="13%">Date</th>   
-								                    <th width="7%">Origin</th>
+                                                    <th>Date</th>
+                                                    <th>PIC</th>   
+								                    <th>Origin</th>
                                                     <th>Dest</th>
-                                                    <th>Carrier</th>
-                                                    <th>20ft</th>
-                                                    <th>40ft</th>
-                                                    <th width="13%">Effective</th>
-                                                    <th width="13%">Scno</th>
-                                                    <th width="10%">Pic</th>
-								                    <th>&nbsp;</th>
-                                                    <th>&nbsp;</th>                                
-                                                    
-
+                                                    <th>Ofc</th>
+                                                    <th>consol</th>
+                                                    <th>ttime</th>
+                                                    <th>effective</th>
+                                                    <th>remark</th>                          
                                                 </tr>
                                             </thead>
                                             <tfoot>
                                                 <tr>
-                                                    <th width="13%">Date</th>   
-								                    <th width="7%">Origin</th>
+                                                    <th>Date</th>
+                                                    <th>PIC</th>   
+								                    <th>Origin</th>
                                                     <th>Dest</th>
-                                                    <th>Carrier</th>
-                                                    <th>20ft</th>
-                                                    <th>40ft</th>
-                                                    <th width="13%">Effective</th>
-                                                    <th width="13%">Scno</th>
-                                                    <th width="10%">Pic</th>
-								                    <th>&nbsp;</th>
-                                                    <th>&nbsp;</th>                                
-                                                    
+                                                    <th>Ofc</th>
+                                                    <th>consol</th>
+                                                    <th>ttime</th>
+                                                    <th>effective</th>
+                                                    <th>remark</th>
                                                 </tr>
                                             </tfoot>
                                             <tbody>
                                               <tr>    
-                                                {% for employee in employee_list %}
-                                                <td>{{employee.chk_date}}</td>
-                                                <td style="text-transform :uppercase">{{employee.origin}}</td>
-                                                <td style="text-transform :uppercase">{{employee.dest}}</td>
-                                                <td style="text-transform :uppercase">{{employee.carrier}}</td>
-                                                <td>{{employee.twenty}}</td>
-                                                <td>{{employee.fourty}}</td>
-                                                <td>{{employee.effective}}</td>
-                                                <td style="text-transform :uppercase">{{employee.scno}}</td>
-                                                <td style="text-transform :capitalize">{{employee.position}}</td>
+                                                {% for lcl in lcl_list %}
+                                                <td>{{lcl.LCL_chk_date}}</td>
+                                                <td>{{lcl.LCL_pic_code}}</td>
+                                                <td style="text-transform :uppercase">{{lcl.LCL_origin}}</td>
+                                                <td style="text-transform :uppercase">{{lcl.LCL_dest}}</td>
+                                                <td style="text-transform :uppercase">{{lcl.LCL_ofc}}</td>
+                                                <td style="text-transform :uppercase">{{lcl.LCL_consol}}</td>
+                                                <td>{{lcl.LCL_ttime}}</td>
+                                                <td>{{lcl.LCL_effective}}</td>
+                                                <td>{{lcl.LCL_remark}}</td>
                                                 <td>
-                                                    <a href="{% url 'FCL_update' employee.id %}">
-                                                        <button type="button" class="btn btn-warning btn-circle btn-sm " id = "update" >
-                                                            <i class="fas fa-pen"></i>
-                                                            </button></a>
-                                                    </td>
-                                                    
-                                                    <td>
-                                                    <form action="{% url 'FCL_delete' employee.id %}" method="post" class="d-inline">
-                                                        {% csrf_token %}
-                                                        <button type="submit" class="btn btn-danger btn-circle btn-sm"  id = "delete" >
-                                                            <i class="fas fa-trash"></i>
-                                                        </button></form>
-                                                    </td>
+                                                <a href="{% url 'LCL_update' lcl.id %}">
+                                                    <button type="button" class="btn btn-warning btn-circle btn-sm " id = "update" >
+                                                        <i class="fas fa-pen"></i>
+                                                        </button></a>
+                                                </td>
+                                                
+                                                <td>
+                                                <form action="{% url 'LCL_delete' lcl.id %}" method="post" class="d-inline">
+                                                    {% csrf_token %}
+                                                    <button type="submit" class="btn btn-danger btn-circle btn-sm"  id = "delete" >
+                                                        <i class="fas fa-trash"></i>
+                                                    </button></form>
+                                                </td>
                                               </tr>
                                                 {% endfor %}   
                                             </tbody>
