--- a/employee_register/templates/sidebar.html
+++ b/employee_register/templates/sidebar.html
@@ -6,7 +6,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">안녕하세요 <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">Family Express</div>
     </a>
 
     <!-- Divider -->
@@ -32,13 +32,13 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
             aria-expanded="true" aria-controls="collapseTwo">
             <i class="fas fa-fw fa-cog"></i>
-            <span>Components</span>
+            <span>Our Net Rate</span>
         </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Components:</h6>
+                <h6 class="collapse-header">Mode:</h6>
                 <a class="collapse-item" href="/main/FCL_list.html">FCL</a>
-                <a class="collapse-item" href="/main/cards.html">LCL</a>
+                <a class="collapse-item" href="/main/LCL_list.html">LCL</a>
                 <a class="collapse-item" href="/main/AIR_list.html">AIR</a>
             </div>
         </div>
@@ -47,11 +47,11 @@
     <!-- Nav Item - Utilities Collapse Menu -->
     <li class="nav-item active">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
+            aria-expanded="false" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-wrench"></i>
             <span>Utilities</span>
         </a>
-        <div id="collapseUtilities" class="collapse show" aria-labelledby="headingUtilities"
+        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Custom Utilities:</h6>
